--- a/client/pom.xml
+++ b/client/pom.xml
@@ -14,7 +14,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.concordia.comp6231.server</groupId>
+            <groupId>org.concordia.comp6231.dfs</groupId>
             <artifactId>server</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
