--- a/client/pom.xml
+++ b/client/pom.xml
@@ -17,7 +17,8 @@
             <groupId>org.concordia.comp6231.dfs</groupId>
             <artifactId>server</artifactId>
             <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
+            <scope>system</scope>
+            <systemPath>${basedir}/../server/target/server-1.0-SNAPSHOT.jar</systemPath>
         </dependency>
     </dependencies>
 </project>
