--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,4 @@ language: java
 jdk: openjdk8
 
 script:
-  - cd server
-  - mvn package
-  - cd ..
-  - cd client
-  - mvn package
-  - cd ..
+  - ./build_project
