--- a/client/pom.xml
+++ b/client/pom.xml
@@ -15,10 +15,9 @@
     <dependencies>
         <dependency>
             <groupId>org.concordia.comp6231.dfs</groupId>
-            <artifactId>server</artifactId>
+            <artifactId>sotrage_server</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
-            <systemPath>${basedir}/../server/target/server-1.0-SNAPSHOT.jar</systemPath>
         </dependency>
     </dependencies>
 </project>
