--- a/storage_server/pom.xml
+++ b/storage_server/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.concordia.comp6231.dfs</groupId>
-    <artifactId>server</artifactId>
+    <artifactId>sotrage_server</artifactId>
     <version>1.0-SNAPSHOT</version>
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
